04 01demo文件更新推送

--- a/01 demo/html/demo.html
+++ b/01 demo/html/demo.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--我是备注-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>demo</title>
+
+
+
+
 </head>
 <body>
+    <h1>
+
+    </h1>
+
+    <h2>
+
+    </h2>
+    <!-- ul>li*数字 ：在ul父标签下创建4个字标签 -->
+
+
+    
+
+    <ul>
+        <li>这是这是无序列表</li>
+        <li>这是这是无序列表</li>
+        <li>这是这是无序列表</li>
+        <li>这是这是无序列表</li>
+    </ul>
+<!-- mac下 选中后，com+d实现批量操作  -->
+
+
+
+<li>这是
+
+
+
+    <li>这是</li>
+</li>
 
 
 
