文件结构整改

--- a/01 demo/html/css-demo1.html
+++ b/01 demo/html/css-demo1.html
@@ -7,11 +7,26 @@
     <title>Document</title>
 
 
-<link rel="stylesheet" type="text/css" href="../css/outstyle.css">
+<!-- <link rel="stylesheet" type="text/css" href="../css/outstyle.css"> -->
 
     <style type="text/css">
 
         /* div{width:400px;height:400px;background: green;} */
+
+
+
+        div{width: 100px;height: 100px;background: green;}
+        h2,p,i,span{width: 100px;height: 100px;background: pink;}
+        .div1{background: black;}
+        #div1{background: blueviolet;}
+        *{background: black;}
+
+
+        #box .div2{background:cadetblue;}
+
+
+
+
 
 
 
@@ -27,9 +42,28 @@
 <body>
 
 
-    <div>div</div>
+    <!-- <div>div</div> -->
 
     <hr>
+
+
+
+    <div id="div1" class="div1">div1</div>
+    <h2>h2 </h2>
+    <p>p</p>
+    <i>i </i>
+    <span>span </span>
+
+
+
+
+
+    <div id="box">
+        <div class="div2">div2</div>
+        <div>div3</div>
+        <div>div4</div>
+    </div>
+<!-- div#box>div.div1 -->
 
 
 
